# SmartAI

./: .replit  app.py  crop_prediction.py  crop_prices.py  data_visualization.py  database.py  pyproject.toml  style.css  translations.py  utils.py
